--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest"
+    "test": "jest",
+    "generate-config": "node scripts/generate-config.js"
   },
   "keywords": [
     "Personal profile",
